# Nash

./: .dockerignore  .env.example  .env.production  .gitignore  .tmuxinator.yml  Dockerfile  README.md  build.sh  docker-compose.yml  librechat.yaml  package-lock.json  package.json  pyproject.toml  start-docker.sh  start.sh  turbo.json
api/: app.py  config.py  monetization_models.py  package.json
client/: index.html  package.json  vite.config.ts
config/: add-balance.js  ban-user.js  connect.js  create-user.js  delete-banner.js  delete-user.js  invite-user.js  list-balances.js  list-users.js  migrate-agent-permissions.js  migrate-prompt-permissions.js  reset-meili-sync.js  reset-password.js  reset-terms.js  set-balance.js  update-banner.js  user-stats.js
scripts/: admin-promote.sh  cleanup-bb-assistants.sh  delete-user.sh  diff-backboard-models.py  find-user-assistant.sh  load-test-concurrent-chat.sh  nash-alert.py  nash-health-summary.sh  nash-watchdog.sh  nashdash.sh  provision-user.sh  reattach-user-assistant.sh  recent-user-stats.sh  refresh-models.js  regen-model-list.sh  release-notes-v2.1.0.md  release.sh  reload-auth.sh  reset-password.sh  reset-user-token-usage.sh  smoke-backboard-doc-upload.sh  smoke-bb-docsearch.sh  smoke-bb-generic-query.sh  smoke-bb-proxy-e2e.sh  smoke-bb-proxy-vs-direct.sh  smoke-bb-websearch-header.sh  smoke-bb-websearch.sh  smoke-chat-stream-cadence.sh  smoke-chat-with-file.sh  smoke-init.sh  smoke-memory-hang-ui-flow.sh  smoke-memory-hang.sh  smoke-memory-persist.sh  smoke-model-null.sh  smoke-session-persist.sh  smoke-xai-header.sh  (+2 more)
(+264 files in other folders)
