[project]
name = "backboard.io_nash"
version = "2.16.1"
description = "Nash 2.0 Python API backend"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1",
    "flask-cors>=5.0",
    "backboard-sdk",
    "pyjwt[crypto]>=2.9",
    "authlib>=1.3",
    "httpx>=0.28",
    "stripe>=11.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "gunicorn>=23.0",
    "pyyaml>=6.0",
    "gevent",
    "flask-limiter>=4.1.1",
    "pyotp>=2.9.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*"]
exclude = ["client*", "packages*", "uploads*", "terraform*", "node_modules*"]
